--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "SOL_AST_COMPILER_CACHE=~/.compiler-cache tsdx watch",
-    "build": "SOL_AST_COMPILER_CACHE=~/.compiler-cache tsdx build",
-    "test": "SOL_AST_COMPILER_CACHE=~/.compiler-cache tsdx test",
-    "lint": "SOL_AST_COMPILER_CACHE=~/.compiler-cache tsdx lint",
-    "prepare": "SOL_AST_COMPILER_CACHE=~/.compiler-cache tsdx build",
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
@@ -52,6 +52,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "solc-typed-ast": "^9.0.0"
   }
 }
