--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "version": "0.1.0",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "dist/cli.js",
   "typings": "dist/index.d.ts",
+  "bin": {
+    "gen": "./dist/cli.js"
+  },
   "files": [
     "dist",
     "src"
@@ -13,12 +16,16 @@
   "scripts": {
     "setup": "echo 'be sure to run ./setup/download_compilers.sh'",
     "start": "tsdx watch",
-    "build": "tsdx build",
+    "build": "tsc",
     "test": "tsdx test",
     "lint": "tsdx lint",
-    "prepare": "tsdx build",
+    "prepare": "tsc",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "package": "pkg . --targets node16-macos-x64 --output gen"
+  },
+  "pkg": {
+    "scripts": "dist/**/*.js"
   },
   "husky": {
     "hooks": {
@@ -53,9 +60,12 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@types/yargs": "^17.0.9",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.0",
+    "pkg": "^5.5.2",
     "solc-typed-ast": "^9.0.0",
-    "ts-toolbelt": "^9.6.0"
+    "ts-toolbelt": "^9.6.0",
+    "yargs": "^17.3.1"
   }
 }
