--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/cli.js",
   "typings": "dist/index.d.ts",
   "bin": {
-    "gen": "./dist/cli.js"
+    "jig": "./dist/cli.js"
   },
   "files": [
     "dist",
@@ -16,12 +16,12 @@
   "scripts": {
     "setup": "echo 'be sure to run ./setup/download_compilers.sh'",
     "build": "tsc",
-    "test": "tsdx test",
+    "test": "tsdx test --runInBand --detectOpenHandles",
     "lint": "tsdx lint",
     "prepare": "tsc",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "package": "pkg . --targets node16-macos-x64 --output gen"
+    "package": "pkg . --targets node16-macos-x64 --output jig"
   },
   "pkg": {
     "scripts": "dist/**/*.js"
@@ -59,11 +59,19 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@types/glob": "^7.2.0",
+    "@types/is-glob": "^4.0.2",
+    "@types/node": "^17.0.21",
     "@types/yargs": "^17.0.9",
+    "cosmiconfig": "^7.0.1",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.0",
+    "glob": "^7.2.0",
+    "is-glob": "^4.0.3",
     "pkg": "^5.5.2",
     "solc-typed-ast": "^9.0.0",
+    "toml": "^3.0.0",
+    "ts-jest": "^27.1.3",
     "ts-toolbelt": "^9.6.0",
     "yargs": "^17.3.1"
   }
