--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prepare": "tsc",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "package": "pkg . --targets node16-macos-x64 --output jig"
+    "package": "pkg . --targets node16-macos-x64 --output jig",
+    "jig": "tsc; ./dist/cli.js make  \"./contracts/*.sol\""
   },
   "pkg": {
     "scripts": "dist/**/*.js"
@@ -59,6 +60,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/glob": "^7.2.0",
     "@types/is-glob": "^4.0.2",
     "@types/node": "^17.0.21",
