--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+  "name": "forge-fixture",
+  "author": "Doug Binder",
   "version": "0.1.0",
   "license": "MIT",
+  "private": true,
   "main": "dist/cli.js",
   "typings": "dist/index.d.ts",
   "bin": {
@@ -11,70 +14,22 @@
     "src"
   ],
   "engines": {
-    "node": ">=10"
+    "node": ">=14"
   },
   "scripts": {
-    "setup": "echo 'be sure to run ./setup/download_compilers.sh'",
-    "build": "tsc",
-    "test": "tsdx test --runInBand --detectOpenHandles",
-    "lint": "tsdx lint --fix",
-    "prepare": "tsc",
-    "size": "size-limit",
-    "analyze": "size-limit --why",
-    "package": "pkg . --targets node16-macos-x64 --output jig",
-    "jig": "tsc; ./dist/cli.js make  \"./contracts/*.sol\""
-  },
-  "pkg": {
-    "scripts": "dist/**/*.js"
+    "build": "turbo run build",
+    "dev": "turbo run dev --parallel",
+    "lint": "turbo run lint"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint"
+      "pre-commit": "turbo run lint"
     }
   },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
-  "name": "forge-fixture",
-  "author": "Doug Binder",
-  "module": "dist/forge-fixture.esm.js",
-  "size-limit": [
-    {
-      "path": "dist/forge-fixture.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/forge-fixture.esm.js",
-      "limit": "10 KB"
-    }
-  ],
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^7.0.8",
     "husky": "^7.0.4",
-    "size-limit": "^7.0.8",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.3.1",
-    "typescript": "^4.6.2"
-  },
-  "dependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/glob": "^7.2.0",
-    "@types/is-glob": "^4.0.2",
-    "@types/node": "^17.0.21",
-    "@types/yargs": "^17.0.9",
-    "cosmiconfig": "^7.0.1",
-    "dotenv": "^16.0.0",
-    "ethers": "^5.6.0",
-    "glob": "^7.2.0",
-    "is-glob": "^4.0.3",
-    "pkg": "^5.5.2",
-    "solc-typed-ast": "^9.0.0",
-    "toml": "^3.0.0",
-    "ts-jest": "^27.1.3",
-    "ts-toolbelt": "^9.6.0",
-    "yargs": "^17.3.1"
+    "eslint": "7.32.0",
+    "prettier": "^2.5.1",
+    "turbo": "latest"
   }
 }
