--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/react-library.json",
-  "include": ["."],
+  "extends": "tsconfig/node14.json",
+  "include": ["index.ts"],
   "exclude": ["dist", "build", "node_modules"]
 }
