--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -5,17 +5,16 @@
   "license": "MIT",
   "main": "index.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/mocha": "^9.1.0",
-    "config": "workspace:*",
     "jest": "^27.5.1",
+    "@types/jest": "^27.4.1",
+    "config": "workspace:*",
     "tsconfig": "workspace:*",
     "typescript": "^4.6.2"
-  },
-  "dependencies": {
-    "@types/jest": "^27.4.1"
   },
   "jest": {
     "preset": "config/jest/node"
