--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
-    "test": "turbo run test"
+    "test": "turbo run test --parallel"
   },
   "husky": {
     "hooks": {
