--- a/packages/layout/tsconfig.json
+++ b/packages/layout/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "tsconfig/node14.json",
-  "include": ["."],
-  "exclude": ["dist", "build", "node_modules"]
+  "include": ["index.ts", "src"],
+  "exclude": ["dist", "build", "node_modules"],
+  "compilerOptions": {
+    "outDir": "./dist"
+  }
 }
