chore: eslint config

--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "tsconfig/node14.json",
-  "include": ["src"],
+  "include": ["index.ts", "src"],
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist"
