--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -8,32 +8,33 @@
     "setup": "echo 0",
     "build": "tsc",
     "test": "exit 0",
-    "lint": "prettier --write .",
+    "lint": "TIMING=1 eslint src --fix",
     "prepare": "tsc"
   },
   "dependencies": {
     "ast": "workspace:*",
     "codegen": "workspace:*",
+    "config": "workspace:*",
+    "dotenv": "^16.0.0",
+    "ethers": "^5.6.0",
+    "glob": "^7.2.0",
+    "is-glob": "^4.0.3",
+    "jest": "^27.5.1",
     "layout": "workspace:*",
-    "utils": "workspace:*",
+    "toml": "^3.0.0",
     "tsconfig": "workspace:*",
+    "utils": "workspace:*",
+    "yargs": "^17.3.1"
+  },
+  "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/glob": "^7.2.0",
     "@types/is-glob": "^4.0.2",
     "@types/node": "^17.0.21",
     "@types/yargs": "^17.0.9",
-    "cosmiconfig": "^7.0.1",
-    "dotenv": "^16.0.0",
-    "ethers": "^5.6.0",
-    "glob": "^7.2.0",
-    "is-glob": "^4.0.3",
+    "eslint": "^7.32.0",
     "pkg": "^5.5.2",
-    "toml": "^3.0.0",
-    "ts-jest": "^27.1.3",
     "ts-toolbelt": "^9.6.0",
-    "yargs": "^17.3.1"
-  },
-  "devDependencies": {
     "typescript": "^4.6.2"
   }
 }
