--- a/packages/ast/package.json
+++ b/packages/ast/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
-  "main": "index.ts",
+  "main": "src/*",
+  "files": [
+    "src/*"
+  ],
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "lint": "TIMING=1 eslint ./index.ts --fix",
+    "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "devDependencies": {
     "solc-typed-ast": "^9.0.0",
@@ -14,6 +20,7 @@
     "typescript": "^4.6.2",
     "@types/mocha": "^9.1.0",
     "@types/jest": "^27.4.1",
+    "eslint": "^7.32.0",
     "layout": "workspace:*",
     "utils": "workspace:*",
     "config": "workspace:*",
