--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -6,7 +6,10 @@
   "main": "index.ts",
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "lint": "TIMING=1 eslint src --fix",
+    "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
@@ -18,7 +21,8 @@
     "typescript": "^4.6.2",
     "utils": "workspace:*",
     "tsconfig": "workspace:*",
-    "config": "workspace:*"
+    "config": "workspace:*",
+    "eslint": "^7.32.0"
   },
   "dependencies": {
     "dotenv": "^16.0.0"
