--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -6,7 +6,10 @@
   "main": "index.ts",
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "lint": "TIMING=1 eslint src --fix",
+    "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {
     "ast": "workspace:*",
@@ -19,7 +22,8 @@
     "@types/jest": "^27.4.1",
     "config": "workspace:*",
     "tsconfig": "workspace:*",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "eslint": "^7.32.0"
   },
   "jest": {
     "preset": "config/jest/node"
