--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,7 +6,9 @@
   "main": "index.ts",
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "dev": "tsc --watch",
+    "lint": "TIMING=1 eslint index.ts --fix",
+    "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "devDependencies": {
     "@types/mocha": "^9.1.0",
@@ -14,7 +16,8 @@
     "@types/jest": "^27.4.1",
     "config": "workspace:*",
     "tsconfig": "workspace:*",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "eslint": "^7.32.0"
   },
   "jest": {
     "preset": "config/jest/node"
