--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,7 +4,20 @@
   "private": true,
   "license": "MIT",
   "main": "index.ts",
+  "scripts": {
+    "test": "jest",
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "lint": "TIMING=1 eslint ./*.ts --fix",
+    "clean": "rm -rf .turbo && rm -rf node_modules"
+  },
   "devDependencies": {
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "jest": "^27.5.1",
+    "config": "workspace:*",
+    "tsconfig": "workspace:*"
+  },
+  "jest": {
+    "preset": "config/jest/node"
   }
 }
