--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "license": "MIT",
   "main": "index.ts",
+  "files": [
+    "index.ts",
+    "dist"
+  ],
   "scripts": {
     "test": "jest",
     "build": "tsc",
