--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "license": "MIT",
   "main": "index.ts",
+  "files": [
+    "index.ts",
+    "dist"
+  ],
   "scripts": {
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "build": "tsc",
     "dev": "tsc --watch",
     "lint": "TIMING=1 eslint src --fix",
@@ -13,17 +17,17 @@
   },
   "dependencies": {
     "ast": "workspace:*",
-    "layout": "workspace:*",
+    "dotenv": "^16.0.0",
     "solc-typed-ast": "^9.1.2"
   },
   "devDependencies": {
-    "@types/mocha": "^9.1.0",
-    "jest": "^27.5.1",
     "@types/jest": "^27.4.1",
+    "@types/mocha": "^9.1.0",
     "config": "workspace:*",
+    "eslint": "^7.32.0",
+    "jest": "^27.5.1",
     "tsconfig": "workspace:*",
-    "typescript": "^4.6.2",
-    "eslint": "^7.32.0"
+    "typescript": "^4.6.2"
   },
   "jest": {
     "preset": "config/jest/node"
