--- a/turbo.json
+++ b/turbo.json
@@ -1,18 +1,23 @@
 {
   "pipeline": {
+    "package": {
+      "dependsOn": ["build"]
+    },
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**"]
+      "outputs": ["dist/**"]
     },
     "lint": {
       "outputs": []
     },
     "test": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["build"]
     },
     "dev": {
       "cache": false
     },
-    "clean": {}
+    "clean": {
+      "cache": false
+    }
   }
 }
