--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -5,5 +5,5 @@
     "rootDir": "src",
     "outDir": "dist"
   },
-  "exclude": ["dist", "build", "node_modules"]
+  "exclude": ["dist", "build"]
 }
