--- a/packages/ast/package.json
+++ b/packages/ast/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
+  "main": "dist/index.js",
   "files": [
-    "src/*",
-    "dist"
+    "dist/*"
   ],
   "scripts": {
     "test": "jest --passWithNoTests",
@@ -15,15 +15,15 @@
     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "devDependencies": {
-    "solc-typed-ast": "^9.0.0",
-    "jest": "^27.5.1",
-    "typescript": "^4.6.2",
-    "@types/mocha": "^9.1.0",
     "@types/jest": "^27.4.1",
-    "eslint": "^7.32.0",
-    "utils": "workspace:*",
+    "@types/mocha": "^9.1.0",
     "config": "workspace:*",
-    "tsconfig": "workspace:*"
+    "eslint": "^7.32.0",
+    "jest": "^27.5.1",
+    "solc-typed-ast": "^9.1.2",
+    "tsconfig": "workspace:*",
+    "typescript": "^4.6.3",
+    "utils": "workspace:*"
   },
   "dependencies": {
     "dotenv": "^16.0.0"
