--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "files": [
-    "index.ts",
-    "dist"
+    "dist/*"
   ],
   "scripts": {
     "test": "jest --passWithNoTests",
@@ -23,11 +22,12 @@
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "@types/mocha": "^9.1.0",
+    "types": "workspace:*",
     "config": "workspace:*",
     "eslint": "^7.32.0",
     "jest": "^27.5.1",
     "tsconfig": "workspace:*",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.3"
   },
   "jest": {
     "preset": "config/jest/node"
