--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest",
     "dev": "tsc --watch",
@@ -11,13 +11,13 @@
     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "devDependencies": {
-    "@types/mocha": "^9.1.0",
-    "jest": "^27.5.1",
     "@types/jest": "^27.4.1",
+    "@types/mocha": "^9.1.0",
     "config": "workspace:*",
+    "eslint": "^7.32.0",
+    "jest": "^27.5.1",
     "tsconfig": "workspace:*",
-    "typescript": "^4.6.2",
-    "eslint": "^7.32.0"
+    "typescript": "^4.6.3"
   },
   "jest": {
     "preset": "config/jest/node"
