--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "files": [
-    "index.ts",
     "dist"
   ],
   "scripts": {
     "test": "jest",
     "dev": "tsc --watch",
+    "build": "tsc",
     "lint": "TIMING=1 eslint ./*.ts --fix",
     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
@@ -18,7 +18,7 @@
     "config": "workspace:*",
     "jest": "^27.5.1",
     "tsconfig": "workspace:*",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.3"
   },
   "jest": {
     "preset": "config/jest/node"
