--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "tsconfig/node14.json",
-  "include": ["src"],
+  "include": ["index.ts", "src"],
   "exclude": ["dist", "build", "node_modules"],
   "compilerOptions": {
     "outDir": "./dist"
