--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -25,7 +25,7 @@
     "tsconfig": "workspace:*",
     "types": "workspace:*",
     "typescript": "^4.6.3",
-    "utils": "workspace:*"
+    "foundry": "workspace:*"
   },
   "dependencies": {
     "dotenv": "^16.0.0"
