--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Doug Binder",
   "version": "0.1.0",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "engines": {
     "node": ">=14"
   },
