--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cli",
-  "version": "0.1.0",
-  "private": true,
+  "name": "forge-fixtures-jig",
+  "version": "0.1.3",
+  "private": false,
   "license": "MIT",
   "main": "./lib/jig.js",
   "bin": {
@@ -13,8 +13,7 @@
     "test": "exit 0",
     "lint": "TIMING=1 eslint src --fix",
     "bundle": "esbuild dist/index.js --outfile=./lib/jig.js --platform=node --target=node10.4; ./lib/jig.js",
-    "local": "pnpm link -g ",
-    "prepare": "tsc"
+    "local": "pnpm link -g "
   },
   "dependencies": {
     "ast": "workspace:*",
