--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     }
   },
   "devDependencies": {
+    "@changesets/cli": "^2.22.0",
     "eslint": "7.32.0",
     "husky": "^7.0.4",
     "prettier": "^2.6.1",
