--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "forge-fixtures-jig",
-  "version": "0.1.3",
+  "name": "cli",
+  "version": "0.1.1",
   "private": false,
   "license": "MIT",
   "main": "./lib/jig.js",
