--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cli",
-  "version": "0.1.2",
+  "name": "@forge-jig/cli",
+  "version": "0.1.3",
   "private": false,
   "license": "MIT",
   "main": "./lib/jig.js",
@@ -12,23 +12,24 @@
     "build": "tsc",
     "test": "exit 0",
     "lint": "TIMING=1 eslint src --fix",
+    "clean": "rm -rf .turbo && rm -rf node_modules",
     "bundle": "esbuild dist/index.js --outfile=./lib/jig.js --platform=node --target=node10.4; ./lib/jig.js",
     "local": "pnpm link -g "
   },
   "dependencies": {
-    "ast": "workspace:*",
-    "codegen": "workspace:*",
-    "config": "workspace:*",
+    "@forge-jig/ast": "workspace:*",
+    "@forge-jig/codegen": "workspace:*",
+    "@forge-jig/config": "workspace:*",
     "dotenv": "^16.0.0",
     "esbuild": "^0.14.30",
     "ethers": "^5.6.0",
     "glob": "^7.2.0",
     "is-glob": "^4.0.3",
     "jest": "^27.5.1",
-    "layout": "workspace:*",
+    "@forge-jig/layout": "workspace:*",
     "toml": "^3.0.0",
-    "tsconfig": "workspace:*",
-    "foundry": "workspace:*",
+    "@forge-jig/tsconfig": "workspace:*",
+    "@forge-jig/foundry": "workspace:*",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
