--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "codegen",
-  "version": "0.1.2",
+  "name": "@forge-jig/codegen",
+  "version": "0.1.3",
   "private": true,
   "license": "MIT",
   "main": "dist/index.js",
@@ -17,15 +17,15 @@
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "@types/mocha": "^9.1.0",
-    "ast": "workspace:*",
-    "config": "workspace:*",
+    "@forge-jig/ast": "workspace:*",
+    "@forge-jig/config": "workspace:*",
     "eslint": "^7.32.0",
     "jest": "^27.5.1",
-    "layout": "workspace:*",
-    "tsconfig": "workspace:*",
-    "types": "workspace:*",
+    "@forge-jig/layout": "workspace:*",
+    "@forge-jig/tsconfig": "workspace:*",
+    "@forge-jig/types": "workspace:*",
     "typescript": "^4.6.3",
-    "foundry": "workspace:*"
+    "@forge-jig/foundry": "workspace:*"
   },
   "dependencies": {
     "dotenv": "^16.0.0"
