--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "config",
-  "version": "1.0.2",
+  "name": "@forge-jig/config",
+  "version": "1.0.3",
   "main": "index.js",
   "license": "MIT",
   "files": [
