--- a/packages/foundry/package.json
+++ b/packages/foundry/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "foundry",
-  "version": "0.1.2",
+  "name": "@forge-jig/foundry",
+  "version": "0.1.3",
   "private": true,
   "license": "MIT",
   "main": "dist/index.js",
@@ -15,9 +15,9 @@
     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "devDependencies": {
-    "config": "workspace:*",
+    "@forge-jig/config": "workspace:*",
     "jest": "^27.5.1",
-    "tsconfig": "workspace:*",
+    "@forge-jig/tsconfig": "workspace:*",
     "typescript": "^4.6.3"
   },
   "jest": {
