--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "layout",
-  "version": "0.1.2",
+  "name": "@forge-jig/layout",
+  "version": "0.1.3",
   "private": true,
   "license": "MIT",
   "main": "dist/index.js",
@@ -15,18 +15,18 @@
     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {
-    "ast": "workspace:*",
+    "@forge-jig/ast": "workspace:*",
     "dotenv": "^16.0.0",
     "solc-typed-ast": "^9.1.2"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "@types/mocha": "^9.1.0",
-    "types": "workspace:*",
-    "config": "workspace:*",
+    "@forge-jig/types": "workspace:*",
+    "@forge-jig/config": "workspace:*",
     "eslint": "^7.32.0",
     "jest": "^27.5.1",
-    "tsconfig": "workspace:*",
+    "@forge-jig/tsconfig": "workspace:*",
     "typescript": "^4.6.3"
   },
   "jest": {
