--- a/packages/layout/tsconfig.json
+++ b/packages/layout/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/node14.json",
+  "extends": "@forge-jig/tsconfig/node14.json",
   "include": ["src"],
   "exclude": ["dist", "build", "node_modules"],
   "compilerOptions": {
