--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "types",
-  "version": "0.1.2",
+  "name": "@forge-jig/types",
+  "version": "0.1.3",
   "private": true,
   "license": "MIT",
   "main": "dist/index.js",
@@ -13,10 +13,10 @@
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "@types/mocha": "^9.1.0",
-    "config": "workspace:*",
+    "@forge-jig/config": "workspace:*",
     "eslint": "^7.32.0",
     "jest": "^27.5.1",
-    "tsconfig": "workspace:*",
+    "@forge-jig/tsconfig": "workspace:*",
     "typescript": "^4.6.3"
   },
   "jest": {
