--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@forge-jig/layout",
-  "version": "0.1.3",
-  "private": true,
+  "version": "0.1.4",
+  "private": false,
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
