--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@forge-jig/codegen",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": false,
   "license": "MIT",
   "main": "dist/index.js",
@@ -15,20 +15,20 @@
     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "devDependencies": {
+    "@forge-jig/config": "workspace:*",
+    "@forge-jig/tsconfig": "workspace:*",
     "@types/jest": "^27.4.1",
     "@types/mocha": "^9.1.0",
-    "@forge-jig/ast": "workspace:*",
-    "@forge-jig/config": "workspace:*",
-    "eslint": "^7.32.0",
-    "jest": "^27.5.1",
-    "@forge-jig/layout": "workspace:*",
-    "@forge-jig/tsconfig": "workspace:*",
-    "@forge-jig/types": "workspace:*",
     "typescript": "^4.6.3",
-    "@forge-jig/foundry": "workspace:*"
+    "eslint": "^7.32.0",
+    "jest": "^27.5.1"
   },
   "dependencies": {
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "@forge-jig/types": "workspace:*",
+    "@forge-jig/layout": "workspace:*",
+    "@forge-jig/foundry": "workspace:*",
+    "@forge-jig/ast": "workspace:*"
   },
   "jest": {
     "preset": "config/jest/node"
