--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@forge-jig/config",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": false,
   "main": "index.js",
   "license": "MIT",
@@ -12,15 +12,13 @@
     "clean": "rm -rf .turbo && rm -rf node_modules",
     "build": "rm -rf .turbo && rm -rf node_modules"
   },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "babel-eslint": "^10.1.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "23.13.1"
-  },
   "devDependencies": {
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "babel-eslint": "^10.1.0",
+    "eslint-plugin-jest": "23.13.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-config-prettier": "^8.5.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0"
   }
 }
