--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@forge-jig/layout",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": false,
   "license": "MIT",
   "main": "dist/index.js",
@@ -16,18 +16,18 @@
   },
   "dependencies": {
     "@forge-jig/ast": "workspace:*",
+    "@forge-jig/types": "workspace:*",
     "dotenv": "^16.0.0",
     "solc-typed-ast": "^9.1.2"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "@types/mocha": "^9.1.0",
-    "@forge-jig/types": "workspace:*",
     "@forge-jig/config": "workspace:*",
-    "eslint": "^7.32.0",
-    "jest": "^27.5.1",
     "@forge-jig/tsconfig": "workspace:*",
-    "typescript": "^4.6.3"
+    "jest": "^27.5.1",
+    "eslint": "^7.32.0",
+    "typescript": "^4.6.3",
+    "@types/jest": "^27.4.1",
+    "@types/mocha": "^9.1.0"
   },
   "jest": {
     "preset": "config/jest/node"
