--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@forge-jig/types",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": false,
   "license": "MIT",
   "main": "dist/index.js",
@@ -11,13 +11,13 @@
     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "@types/mocha": "^9.1.0",
     "@forge-jig/config": "workspace:*",
-    "eslint": "^7.32.0",
-    "jest": "^27.5.1",
     "@forge-jig/tsconfig": "workspace:*",
-    "typescript": "^4.6.3"
+    "jest": "^27.5.1",
+    "eslint": "^7.32.0",
+    "typescript": "^4.6.3",
+    "@types/jest": "^27.4.1",
+    "@types/mocha": "^9.1.0"
   },
   "jest": {
     "preset": "config/jest/node"
