chore add dist to files

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.5",
   "private": false,
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "test": "jest",
     "dev": "tsc --watch",
