--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@forge-jig/tsconfig/node14.json",
-  "include": ["index.ts"],
+  "include": ["index.ts", "__test__"],
   "exclude": ["dist", "build", "node_modules"],
   "compilerOptions": {
     "outDir": "./dist"
