--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -18,16 +18,18 @@
     "@forge-jig/ast": "workspace:*",
     "@forge-jig/types": "workspace:*",
     "dotenv": "^16.0.0",
+    "neverthrow": "^6.0.0",
     "solc-typed-ast": "^9.1.2"
   },
   "devDependencies": {
     "@forge-jig/config": "workspace:*",
     "@forge-jig/tsconfig": "workspace:*",
-    "jest": "^27.5.1",
-    "eslint": "^7.32.0",
-    "typescript": "^4.6.3",
     "@types/jest": "^27.4.1",
-    "@types/mocha": "^9.1.0"
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.21",
+    "eslint": "^7.32.0",
+    "jest": "^27.5.1",
+    "typescript": "^4.6.3"
   },
   "jest": {
     "preset": "<rootDir>/../../packages/config/jest/node"
