--- a/turbo.json
+++ b/turbo.json
@@ -14,7 +14,8 @@
       "outputs": []
     },
     "test": {
-      "dependsOn": ["build"]
+      "dependsOn": ["build"],
+      "cache": false
     },
     "dev": {
       "cache": false
