--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -19,16 +19,17 @@
     "@forge-jig/tsconfig": "workspace:*",
     "@types/jest": "^27.4.1",
     "@types/mocha": "^9.1.0",
-    "typescript": "^4.6.3",
     "eslint": "^7.32.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "@forge-jig/types": "workspace:*",
-    "@forge-jig/layout": "workspace:*",
+    "@forge-jig/ast": "workspace:*",
     "@forge-jig/foundry": "workspace:*",
-    "@forge-jig/ast": "workspace:*"
+    "@forge-jig/layout": "workspace:*",
+    "@forge-jig/types": "workspace:*",
+    "@types/node": "^18.11.18",
+    "dotenv": "^16.0.0"
   },
   "jest": {
     "preset": "<rootDir>/../../packages/config/jest/node"
